[gd_scene load_steps=9 format=2]

[ext_resource path="res://Final Assets/Scenes/Main/Main.gd" type="Script" id=1]
[ext_resource path="res://Final Assets/Scenes/TitleScreen/TitleScreen.tscn" type="PackedScene" id=2]
[ext_resource path="res://Final Assets/Scenes/CreditScene/CreditScene.tscn" type="PackedScene" id=3]
[ext_resource path="res://Final Assets/Scenes/Levels/Level1.tscn" type="PackedScene" id=4]
[ext_resource path="res://Final Assets/Scenes/Levels/Level2.tscn" type="PackedScene" id=5]
[ext_resource path="res://Final Assets/Scenes/Levels/Level4.tscn" type="PackedScene" id=6]
[ext_resource path="res://Final Assets/Scenes/HUD/HUD.tscn" type="PackedScene" id=7]
[ext_resource path="res://Final Assets/Scenes/SceneTransition/SceneTransition.tscn" type="PackedScene" id=8]

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="TitleScreen" parent="." instance=ExtResource( 2 )]

[node name="CreditScene" parent="." instance=ExtResource( 3 )]
visible = false

[node name="Level1" parent="." instance=ExtResource( 4 )]
visible = false

[node name="Level2" parent="." instance=ExtResource( 5 )]
visible = false

[node name="Level3" parent="." instance=ExtResource( 5 )]
visible = false

[node name="Level4" parent="." instance=ExtResource( 6 )]
visible = false

[node name="HUD" parent="." instance=ExtResource( 7 )]
visible = false
margin_top = 402.514
margin_bottom = 602.514

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 516.059, 298.478 )
current = true

[node name="Tween" type="Tween" parent="."]

[node name="SceneTransition" parent="." instance=ExtResource( 8 )]
position = Vector2( 510, -103 )

